finish page home (3)

--- a/Style.css
+++ b/Style.css
@@ -31,6 +31,7 @@ body {
 
 .container {
   background-color: #FFEDF5;
+  background-image: url("./img/Group 2994.svg");
 }
 
 .container .c_middle .cm_top {
@@ -78,6 +79,15 @@ body {
   height: 45px;
   background-color: #E34557;
   margin-left: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .container .c_middle .select_all {
@@ -244,6 +254,10 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.container .select:hover, .container .select_all:hover {
+  background-color: #f8d1e2;
 }
 
 @media only screen and (min-width: 1200px) {
